--- a/Business/Business.csproj
+++ b/Business/Business.csproj
@@ -9,4 +9,8 @@
     <ProjectReference Include="..\Entity\Entity.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <PackageReference Include="FluentValidation" Version="10.0.4" />
+  </ItemGroup>
+
 </Project>
