--- a/WebAPI/appsettings.json
+++ b/WebAPI/appsettings.json
@@ -2,6 +2,12 @@
   "ConnectionStrings": {
     "DefaultConnection": "server=DESKTOP-2A57EEU;database=MultiPurposeForum;Trusted_Connection=True;MultipleActiveResultSets=true"
   },
+  "TokenOptions": {
+    "Audience": "can@can.com",
+    "Issuer": "can@can.com",
+    "AccessTokenExpiration": 10,
+    "SecurityKey": "mysupersecretkeymysupersecretkey"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
