--- a/docker-compose.override.yml
+++ b/docker-compose.override.yml
@@ -1,10 +1,21 @@
 version: '3.4'
 
 services:
+  forumdb:
+    container_name: forumdb
+    environment:
+        SA_PASSWORD: "SwN12345678"
+        ACCEPT_EULA: "Y"
+    restart: always
+    ports:
+        - "1431:1433"
+
   webapi:
-    container_name: web.api
+    container_name: forum.api
     environment:
       - ASPNETCORE_ENVIRONMENT=Development
-
+      - "ConnectionStrings:DefaultConnection=Server=forumdb;Database=ForumDb;User Id=sa;Password=SwN12345678"
+    depends_on:
+        - forumdb
     ports:
-      - "8003:80"
+        - "6001:80"
