--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,6 +1,8 @@
 version: '3.4'
 
 services:
+  forumdb:
+    image: mcr.microsoft.com/mssql/server:2017-latest
   webapi:
     image: ${DOCKER_REGISTRY-}webapi
     build:
