--- a/WebAPI/appsettings.json
+++ b/WebAPI/appsettings.json
@@ -1,4 +1,49 @@
 {
+  "Serilog": {
+    "Using": [ "Serilog.Sinks.Console", "Serilog.Sinks.File" ],
+    "MinimumLevel": {
+      "Default": "Information",
+      "Override": {
+        "Microsoft": "Error"
+      }
+    },
+    "WriteTo": [
+      {
+        "Name": "Seq",
+        "Args": {
+          "serverUrl": "http://localhost:5341"
+
+        }
+      },
+      { "Name": "Console" },
+      {
+        "Name": "File",
+        "Args": {
+          "path": "D:\\Yeni klasör (6)\\Desktop\\Bitirme Ödevi\\MultiPurposeForumApp\\Logs\\logs.txt",
+          "rollingInterval": "Day"
+        }
+      }
+
+    ],
+    "Enrich": [ "FromLogContext", "WithMachineName", "WithThreadId" ],
+    "Destructure": [
+      {
+        "Name": "ToMaximumDepth",
+        "Args": { "maximumDestructuringDepth": 4 }
+      },
+      {
+        "Name": "ToMaximumStringLength",
+        "Args": { "maximumStringLength": 100 }
+      },
+      {
+        "Name": "ToMaximumCollectionCount",
+        "Args": { "maximumCollectionCount": 10 }
+      }
+    ],
+    "Properties": {
+      "Application": "Forum"
+    }
+  },
   "ConnectionStrings": {
     "DefaultConnection": "server=DESKTOP-2A57EEU;database=MultiPurposeForum;Trusted_Connection=True;MultipleActiveResultSets=true"
   },
