Xunit libraries added for unit test

--- a/WebAPI/appsettings.json
+++ b/WebAPI/appsettings.json
@@ -19,7 +19,7 @@
       {
         "Name": "File",
         "Args": {
-          "path": "D:\\Yeni klasör (6)\\Desktop\\Bitirme Ödevi\\MultiPurposeForumApp\\Logs\\logs.txt",
+          "path": "Logs/log.txt",
           "rollingInterval": "Day"
         }
       }
